cc: Force a redraw on initializing a new output surface for remote compositor.

When the output surface is lost, the LTHI drops all resources and tiles, and
waits for the next commit for the next draw. This commit might early out with
no updates in which case we will never perform raster new tiles and redraw.

Schedule a draw when a new output is surface is initialized to avoid this.

BUG=597710
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1831083002

Cr-Commit-Position: refs/heads/master@{#383204}

Former-commit-id: 01dc424291863fcaa3a36c3de7e91bfae6172c42